# SQLChatbot

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  __main__.py  app.py  database.py  db_config.json  dependencies.txt  docker-compose.yml  docker-requirements.txt  encryption_utils.py  fastapi_backend.py  init_db.py  langchain_sql.py  load_employee_reviews.py  main.py  pyproject.toml  replit.nix  run-docker.sh  run.py  setup_database.py  setup_databases.py  setup_reviews_database.py  setup_sqlite_db.py  setup_test_db.py  simple_app.py  sql_chatbot.db  start.py  test_database.db
.streamlit/: config.toml
app/: __init__.py  app.py
app/api/: __init__.py  api.py  api_simplified.py  models.py
app/backend/: fastapi_backend.py
app/data/: __init__.py  config.json  db_config.json  load_employee_reviews.py  setup_sample_db.py  sql_chatbot.db  test_database.db
app/data/csv/: employee_reviews.csv
app/database/: __init__.py  connection_manager.py  db_connection.py  db_operations.py
app/models/: __init__.py  sql_generator.py
app/utils/: validation.py
data/csv/: customers.csv  employees.csv  order_items.csv  orders.csv  products.csv
src/: __init__.py  main.py
src/api/: fastapi_backend.py
src/backend/: api.py  nlp.py
src/database/: db.py
src/db/: create_review_tables.py  csv_data.py  database.py  setup_database.py
src/frontend/: app.py
src/utils/: csv_file_loader.py  csv_import.py  langchain_sql.py
